2009-04-23  Chris Toshok  <toshok@ximian.com>

	* animation.cpp (Animation::AllocateClock): remove the name
	setting from here, since it only works here if the target/property
	were set on the animation itself.
	(AnimationClock::HookupStorage): and move it here, when we know
	both the target and property.

	* multiscaleimage.cpp (MultiScaleImage::SetViewportWidth): use
	Class::Event instead of instance->Event.  also set the name of the
	storyboard in debug mode.
	(MultiScaleImage::SetViewportOrigin): same.
	(motion_finished): make static.

2009-04-23  Chris Toshok  <toshok@ximian.com>

	* clock.cpp (ClockGroup::UpdateFromParentTime): only tick child
	clocks (not clockgroups, mind you) if we're active and not paused.
	Fixes animations reverting in lutz's deep zoom demo.

2009-04-23  Jeffrey Stedfast  <fejj@novell.com>

	Lots of fixage for MS DRT #209

	* layout.cpp (layout_word_wrap): Fixed for inseparables,
	exclamations, ambiguous, and postfix. Also removed the
	glyph->index == 0 hack that was there for Silverlight 1.0

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.h:
	* dependencyobject.cpp: Add a way to mark allow objects to be
	  deleted on any thread, not just the main thread.

	* pipeline.cpp: MediaClosures can be deleted on any thread.

2009-04-22  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (layout_word_wrap): Add a bit more logic for infix
	separators. Finishes off MSDRT 208.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (value_from_str): permit empty int32's (they're 0).
	add comment about empty doubles.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (dependency_object_add_child): guard against adding an
	empty Value to a resource dictionary.  this happen when you have
	no content on a primitive type (<sys:Bool></sys:Bool>) and
	value_from_str can't deal with parsing an empty string.
	(value_from_str): for non-object/non-string types, we need to